--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>com.jd.blockchain</groupId>
 	<artifactId>jdchain-dependencies</artifactId>
-	<version>1.1.5.RELEASE</version>
+	<version>1.1.6-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<description>jdchain-dependencies</description>
 
