--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.jd.blockchain</groupId>
 	<artifactId>jdchain-project</artifactId>
-	<version>1.1.5.RELEASE</version>
+	<version>1.1.6-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<description>jdchain</description>
 	<name>jdchain-project</name>
