--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.jd.blockchain</groupId>
 		<artifactId>jdchain-dependencies</artifactId>
-		<version>1.1.6-SNAPSHOT</version>
+		<version>1.1.6.RELEASE</version>
 		<relativePath>../dependencies</relativePath>
 	</parent>
 
