--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -57,6 +57,7 @@
 		<cache-api.version>1.1.0</cache-api.version>
 		<commons-io.version>2.4</commons-io.version>
 		<disruptor.version>3.4.2</disruptor.version>
+		<netty.version>4.1.66.Final</netty.version>
 	</properties>
 
 	<dependencyManagement>
@@ -294,6 +295,13 @@
 				<artifactId>guava</artifactId>
 				<version>19.0</version>
 			</dependency>
+
+			<dependency>
+				<groupId>io.netty</groupId>
+				<artifactId>netty-all</artifactId>
+				<version>${netty.version}</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
